<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_path"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_path" />
        <item
            android:id="@+id/menu_request_list"
            android:icon="@drawable/ic_requst_list"
            android:title="@string/nav_orders" />

        <!--<item-->
            <!--android:id="@+id/menu_verification"-->
            <!--android:icon="@drawable/ic_requst_verify"-->
            <!--android:title="@string/verify_menu" />-->

        <item
            android:id="@+id/menu_intro_activity"
            android:icon="@drawable/ic_branch"
            android:title="@string/select_branch"
              />
        <item
            android:id="@+id/menu_report_activity"
            android:icon="@drawable/ic_chart"
            android:title="@string/reports"
            />
        <item
            android:id="@+id/menu_message_activity"
            android:icon="@drawable/ic_messages"
            android:title="@string/message"
            />

        <item
            android:id="@+id/menu_tracking_show"
            android:icon="@drawable/ic_tracking_show"
            android:title="@string/main_menu_visitor_tracking_show" />

        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/main_menu_settings" />

       <!-- <item
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_catalog" />
        <item
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_customers" />-->
    </group>


    <item android:title="">
        <menu>
            <!--<item-->
                <!--android:icon="@drawable/ic_insert_chart_black_24dp"-->
                <!--android:title="@string/nav_report" />-->
            <!--<item-->
                <!--android:icon="@drawable/ic_settings_black_24dp"-->
                <!--android:title="@string/nav_setting" />-->
            <!--<item-->
                <!--android:icon="@drawable/ic_priority_high_black_24dp"-->
                <!--android:title="@string/nav_about" />-->


            <item
                android:id="@+id/my_panel"
                android:icon="@drawable/ic_priority_high_black_24dp"
                android:title="برنامه نویس" />
        </menu>
    </item>

</menu>
